--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Yonathan Mendenhall</title>
     <style>
-        /* Add a marble-style background */
+        /* Add the specified background image */
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background: url('https://images.unsplash.com/photo-1557682224-5b8590cd9ec5?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080') no-repeat center center fixed;
+            background: url('https://img.freepik.com/free-vector/computer-science-background-design_23-2148474625.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #000;
             display: flex;
