--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Yonathan Mendenhall</title>
+    <title> Yonathan Mendenhall</title>
     <style>
         /* Add the specified background image */
         body {
