--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background: url('https://img.freepik.com/free-photo/earth-galaxy-elements-this-image-furnished-by-nasa_335224-750.jpg?t=st=1745721255~exp=1745724855~hmac=ba9bfdb62d6b4bf58bd43e924fc84f081057fc2e23523ce448fb3170532d4c97&w=996') no-repeat center center fixed;
+            background: url('https://img.freepik.com/free-photo/earth-galaxy-elements-this-image-furnished-by-nasa_335224-750.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #000;
             display: flex;
