--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         h1 {
             font-size: 2.5rem;
             margin-bottom: 20px;
-            animation: fadeIn 2s ease-in-out infinite alternate;
+            animation: fadeIn 10s ease-in-out infinite alternate;
         }
 
         /* Keyframes for animated text */
@@ -69,7 +69,7 @@
 </head>
 <body>
     <div class="content-wrapper">
-        <h1>About Yonathan Mendenhall</h1>
+        <h1> Yonathan Mendenhall</h1>
         <p>
             My name is Yonathan Mendenhall, and I am 24 years old. I have been pursuing a degree in Computer Science for the past two years with a GPA of 3.1. I am deeply interested in becoming a Software Engineer and am also open to exploring roles such as Data Analyst or Account Specialist within the tech industry.
         </p>
