--- a/index.html
+++ b/index.html
@@ -74,15 +74,14 @@
             My name is Yonathan Mendenhall, and I am 24 years old.
             I have been pursuing a degree in Computer Science for the past two years with a GPA of 3.1. 
             I am deeply interested in becoming a Software Engineer and am also open to exploring roles such as Data Analyst or Account Specialist within the tech industry.
-        </p>
-        <p>
-            I have four years of experience using MariaDB database software. 
+        </p>I have four years of experience using MariaDB database software. 
             At the age of 14, I created an online game, and by 15, I opened my first business fixing iPhones' software, jailbreaking iPhones, unlocking phones, hard-resetting computers, and unlocking devices.
-        </p>
         <p>
-            I possess strong leadership skills, am very reliable, a great listener, and eager to learn. 
+            
+        </p>I possess strong leadership skills, am very reliable, a great listener, and eager to learn. 
             I am an energetic individual with a great heart, and I thrive on new challenges and opportunities for growth.
         </p>
+        <p>
         <footer>© 2025 Yonathan Mendenhall | All Rights Reserved</footer>
     </div>
 </body>
